--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,27 +3,31 @@
 @tailwind utilities;
 
 .active{
-    color: #1E73BE;
-}
-
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+    color:#1E73BE
 }
 
 .editorjsdiv h2{
-  font-weight: 600;
-  font-size: 18px;
+    font-weight: 600;
+    font-size: 18px;
 }
 .editorjsdiv h3, h4, h5{
-  font-weight: 500;
-  font-size: 16px;
+    font-weight: 500;
+    font-size: 16px;
 }
 
 .editorjsdiv li{
-  margin-bottom: 10px;
-  list-style-type: disc;
-  padding-left: 10px;
-  margin-left: 25px;
+    margin-bottom: 10px;
+    list-style-type: disc;
+    padding-left: 10px;
+    margin-left: 25px;
+}
+
+input[type=number]{
+    -moz-appearance: textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
